--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="preload" data-preload>
         <div class="circle"></div>
-        <p class="text"> NATHIA &#10084; </p>
+        <p class="text"> NATHIA 💖 </p>
     </div>
 
 
